# tenpo

./: .gitignore  CODE_OF_CONDUCT.md  Cargo.toml  README.md  flake.nix  rust-toolchain.toml
.github/workflows/: nix-checker.yml
assets/sounds/: LICENSE.md
crates/cli/: Cargo.toml
crates/cli/src/: lib.rs
crates/score/: Cargo.toml  README.md
crates/score/src/: lib.rs  types.rs
scores/test-score/: tenpo.toml
src/: cli.rs  lib.rs  main.rs
