[package]
name = "tenpo"
authors.workspace = true
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
publish.workspace = true
readme.workspace = true

[workspace.package]
authors = ["haruki7049 <tontonkirikiri@gmail.com>"]
version = "0.1.0"
edition = "2024"
license = "MIT"
repository = "https://github.com/haruki7049/tenpo"
publish = false
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace]
resolver = "3"
members = ["crates/score"]

[dependencies]
bevy = "0.17.2"
clap = { version = "4.5.45", features = ["derive", "string"] }
